:memo: Add documentation swagger route delete abrigo
